integration_tests/codegen_fail/fail/scalar/impl_invalid_url.stderr
error: Invalid URL: relative URL without a base
 --> fail/scalar/impl_invalid_url.rs:6:24
  |
6 |     specified_by_url = "not an url",
  |                        ^^^^^^^^^^^^
